--- a/templates/components/skills_list.html
+++ b/templates/components/skills_list.html
@@ -1,111 +1,115 @@
 <!-- This page contains the skill list with checkboxes which is used in search.html. -->
 
-<div class="row">
-    <div class="col-6">
+<form role="form">
+    <div class="row">
+        <div class="col-6">
 
 
-        <div class="form-check">
-            <label class="form-check-label">
-                <input type="checkbox" class="form-check-input" value="">CSS
-            </label>
-        </div>
-        <div class="form-check">
-            <label class="form-check-label">
-                <input type="checkbox" class="form-check-input" value="">JavaScript
-            </label>
-        </div>
-        <div class="form-check">
-            <label class="form-check-label">
-                <input type="checkbox" class="form-check-input" value="">React
-            </label>
-        </div>
+            <div class="form-check abc-checkbox">
+                <input class="form-check-input" id="checkbox1" type="checkbox">
+                <label class="form-check-label" for="checkbox1">
+                    CSS
+                </label>
+            </div>
+            <div class="form-check">
+                <label class="form-check-label">
+                    <input type="checkbox" class="form-check-input" value="">JavaScript
+                </label>
+            </div>
+            <div class="form-check">
+                <label class="form-check-label">
+                    <input type="checkbox" class="form-check-input" value="">React
+                </label>
+            </div>
 
 
-        <div class="form-check">
-            <label class="form-check-label">
-                <input type="checkbox" class="form-check-input" value="">Vue
-            </label>
-        </div>
-        <div class="form-check">
-            <label class="form-check-label">
-                <input type="checkbox" class="form-check-input" value="">Angular
-            </label>
-        </div>
-        <div class="form-check">
-            <label class="form-check-label">
-                <input type="checkbox" class="form-check-input" value="">PHP
-            </label>
-        </div>
+            <div class="form-check">
+                <label class="form-check-label">
+                    <input type="checkbox" class="form-check-input" value="">Vue
+                </label>
+            </div>
+            <div class="form-check">
+                <label class="form-check-label">
+                    <input type="checkbox" class="form-check-input" value="">Angular
+                </label>
+            </div>
+            <div class="form-check">
+                <label class="form-check-label">
+                    <input type="checkbox" class="form-check-input" value="">PHP
+                </label>
+            </div>
 
 
-        <div class="form-check">
-            <label class="form-check-label">
-                <input type="checkbox" class="form-check-input" value="">Ruby
-            </label>
+            <div class="form-check">
+                <label class="form-check-label">
+                    <input type="checkbox" class="form-check-input" value="">Ruby
+                </label>
+            </div>
+            <div class="form-check">
+                <label class="form-check-label">
+                    <input type="checkbox" class="form-check-input" value="">C++
+                </label>
+            </div>
+            <div class="form-check">
+                <label class="form-check-label">
+                    <input type="checkbox" class="form-check-input" value="">C#
+                </label>
+            </div>
+
         </div>
-        <div class="form-check">
-            <label class="form-check-label">
-                <input type="checkbox" class="form-check-input" value="">C++
-            </label>
-        </div>
-        <div class="form-check">
-            <label class="form-check-label">
-                <input type="checkbox" class="form-check-input" value="">C#
-            </label>
+        <div class="col-6">
+
+
+            <div class="form-check">
+                <label class="form-check-label">
+                    <input type="checkbox" class="form-check-input" value="">UX
+                </label>
+            </div>
+            <div class="form-check">
+                <label class="form-check-label">
+                    <input type="checkbox" class="form-check-input" value="">Web Design
+                </label>
+            </div>
+            <div class="form-check">
+                <label class="form-check-label">
+                    <input type="checkbox" class="form-check-input" value="">SQL
+                </label>
+            </div>
+
+            <div class="form-check">
+                <label class="form-check-label">
+                    <input type="checkbox" class="form-check-input" value="">Java
+                </label>
+            </div>
+            <div class="form-check">
+                <label class="form-check-label">
+                    <input type="checkbox" class="form-check-input" value="">Rust
+                </label>
+            </div>
+            <div class="form-check">
+                <label class="form-check-label">
+                    <input type="checkbox" class="form-check-input" value="">Go
+                </label>
+            </div>
+
+
+            <div class="form-check">
+                <label class="form-check-label">
+                    <input type="checkbox" class="form-check-input" value="">Swift
+                </label>
+            </div>
+            <div class="form-check">
+                <label class="form-check-label">
+                    <input type="checkbox" class="form-check-input" value="">Kotlin
+                </label>
+            </div>
+            <div class="form-check">
+                <label class="form-check-label">
+                    <input type="checkbox" class="form-check-input" value="">Perl
+                </label>
+            </div>
         </div>
 
     </div>
-    <div class="col-6">
 
-
-        <div class="form-check">
-            <label class="form-check-label">
-                <input type="checkbox" class="form-check-input" value="">UX
-            </label>
-        </div>
-        <div class="form-check">
-            <label class="form-check-label">
-                <input type="checkbox" class="form-check-input" value="">Web Design
-            </label>
-        </div>
-        <div class="form-check">
-            <label class="form-check-label">
-                <input type="checkbox" class="form-check-input" value="">SQL
-            </label>
-        </div>
-
-        <div class="form-check">
-            <label class="form-check-label">
-                <input type="checkbox" class="form-check-input" value="">Java
-            </label>
-        </div>
-        <div class="form-check">
-            <label class="form-check-label">
-                <input type="checkbox" class="form-check-input" value="">Rust
-            </label>
-        </div>
-        <div class="form-check">
-            <label class="form-check-label">
-                <input type="checkbox" class="form-check-input" value="">Go
-            </label>
-        </div>
-
-
-        <div class="form-check">
-            <label class="form-check-label">
-                <input type="checkbox" class="form-check-input" value="">Swift
-            </label>
-        </div>
-        <div class="form-check">
-            <label class="form-check-label">
-                <input type="checkbox" class="form-check-input" value="">Kotlin
-            </label>
-        </div>
-        <div class="form-check">
-            <label class="form-check-label">
-                <input type="checkbox" class="form-check-input" value="">Perl
-            </label>
-        </div>
-    </div>
-
-</div>
+</form>
