--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -18,8 +18,8 @@
     <link rel="icon" type="image/vnd.microsoft.icon" href="/static/img/favicon.ico">
 
     <!-- Load stylesheets -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+
+        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css"
         href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" />
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600|Roboto&display=swap" rel="stylesheet">
@@ -38,7 +38,7 @@
 
 
 
-    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/custom-checkbox-radio.css')}}" /> 
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/awesome-bootstrap-checkbox.css')}}" /> 
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/main.css')}}" />
 </head>
 
