customize awesome-bootstrap-checkbox.css

--- a/templates/components/skills_list.html
+++ b/templates/components/skills_list.html
@@ -5,9 +5,9 @@
         <div class="col-6">
 
 
-            <div class="form-check abc-checkbox">
-                <input class="form-check-input" id="checkbox1" type="checkbox">
-                <label class="form-check-label" for="checkbox1">
+            <div class="form-check abc-checkbox ">
+                <input class="form-check-input" name="skillsCSS" id="skillsCSS" type="checkbox">
+                <label class="form-check-label" for="skillsCSS">
                     CSS
                 </label>
             </div>
