--- a/static/css/awesome-bootstrap-checkbox.css
+++ b/static/css/awesome-bootstrap-checkbox.css
@@ -50,7 +50,9 @@
 .abc-checkbox input[type="checkbox"]:checked + label::after,
 .abc-checkbox input[type="radio"]:checked + label::after {
   font-family: "FontAwesome";
-  content: ""; }
+  content: "";
+  background-color: #2581B0;
+color: white; }
 .abc-checkbox input[type="checkbox"]:indeterminate + label::after,
 .abc-checkbox input[type="radio"]:indeterminate + label::after {
   display: block;
