add separate html page for the desired skill flters.

--- a/templates/pages/search.html
+++ b/templates/pages/search.html
@@ -80,7 +80,7 @@
 
                     <div class="skill-column">
 
-                        {% include 'components/skills_list.html' %}
+                        {% include 'components/desired_skills_list.html' %}
 
 
                     </div>
