--- a/templates/components/skills_list.html
+++ b/templates/components/skills_list.html
@@ -1,5 +1,8 @@
 <!-- This page contains the skill list with checkboxes which is used in search.html. -->
 
+<!-- The checkboxes rely on the awesome-bootstrap-checkboxes library from here: https://github.com/flatlogic/awesome-bootstrap-checkbox
+The abc-checkbox class was edited by me in the downloaded css file to reflect tanDev brand colors. -->
+
 <form role="form">
     <div class="row">
         <div class="col-6">
@@ -11,48 +14,55 @@
                     CSS
                 </label>
             </div>
-            <div class="form-check">
-                <label class="form-check-label">
-                    <input type="checkbox" class="form-check-input" value="">JavaScript
+            <div class="form-check abc-checkbox ">
+                <input class="form-check-input" name="skillsJS" id="skillsJS" type="checkbox">
+                <label class="form-check-label" for="skillsJS">
+                    JavaScript
                 </label>
             </div>
-            <div class="form-check">
-                <label class="form-check-label">
-                    <input type="checkbox" class="form-check-input" value="">React
-                </label>
-            </div>
-
-
-            <div class="form-check">
-                <label class="form-check-label">
-                    <input type="checkbox" class="form-check-input" value="">Vue
-                </label>
-            </div>
-            <div class="form-check">
-                <label class="form-check-label">
-                    <input type="checkbox" class="form-check-input" value="">Angular
-                </label>
-            </div>
-            <div class="form-check">
-                <label class="form-check-label">
-                    <input type="checkbox" class="form-check-input" value="">PHP
+            <div class="form-check abc-checkbox ">
+                <input class="form-check-input" name="skillsReact" id="skillsReact" type="checkbox">
+                <label class="form-check-label" for="skillsReact">
+                    React
                 </label>
             </div>
 
 
-            <div class="form-check">
-                <label class="form-check-label">
-                    <input type="checkbox" class="form-check-input" value="">Ruby
+            <div class="form-check abc-checkbox ">
+                <input class="form-check-input" name="skillsVue" id="skillsVue" type="checkbox">
+                <label class="form-check-label" for="skillsVue">
+                    Vue
                 </label>
             </div>
-            <div class="form-check">
-                <label class="form-check-label">
-                    <input type="checkbox" class="form-check-input" value="">C++
+            <div class="form-check abc-checkbox ">
+                <input class="form-check-input" name="skillsAngular" id="skillsAngular" type="checkbox">
+                <label class="form-check-label" for="skillsAngular">
+                    Angular
                 </label>
             </div>
-            <div class="form-check">
-                <label class="form-check-label">
-                    <input type="checkbox" class="form-check-input" value="">C#
+            <div class="form-check abc-checkbox ">
+                <input class="form-check-input" name="skillsPHP" id="skillsPHP" type="checkbox">
+                <label class="form-check-label" for="skillsPHP">
+                    PHP
+                </label>
+            </div>
+
+            <div class="form-check abc-checkbox ">
+                <input class="form-check-input" name="skillsRuby" id="skillsRuby" type="checkbox">
+                <label class="form-check-label" for="skillsRuby">
+                    Ruby
+                </label>
+            </div>
+            <div class="form-check abc-checkbox ">
+                <input class="form-check-input" name="skillsC++" id="skillsC++" type="checkbox">
+                <label class="form-check-label" for="skillsC++">
+                    C++
+                </label>
+            </div>
+            <div class="form-check abc-checkbox ">
+                <input class="form-check-input" name="skillsC#" id="skillsC#" type="checkbox">
+                <label class="form-check-label" for="skillsC#">
+                    C#
                 </label>
             </div>
 
@@ -60,52 +70,61 @@
         <div class="col-6">
 
 
-            <div class="form-check">
-                <label class="form-check-label">
-                    <input type="checkbox" class="form-check-input" value="">UX
+            <div class="form-check abc-checkbox ">
+                <input class="form-check-input" name="skillsUX" id="skillsUX" type="checkbox">
+                <label class="form-check-label" for="skillsUX">
+                    UX
                 </label>
             </div>
-            <div class="form-check">
-                <label class="form-check-label">
-                    <input type="checkbox" class="form-check-input" value="">Web Design
+            <div class="form-check abc-checkbox ">
+                <input class="form-check-input" name="skillsDesign" id="skillsDesign" type="checkbox">
+                <label class="form-check-label" for="skillsDesign">
+                    Web Design
                 </label>
             </div>
-            <div class="form-check">
-                <label class="form-check-label">
-                    <input type="checkbox" class="form-check-input" value="">SQL
-                </label>
-            </div>
-
-            <div class="form-check">
-                <label class="form-check-label">
-                    <input type="checkbox" class="form-check-input" value="">Java
-                </label>
-            </div>
-            <div class="form-check">
-                <label class="form-check-label">
-                    <input type="checkbox" class="form-check-input" value="">Rust
-                </label>
-            </div>
-            <div class="form-check">
-                <label class="form-check-label">
-                    <input type="checkbox" class="form-check-input" value="">Go
+            <div class="form-check abc-checkbox ">
+                <input class="form-check-input" name="skillsSQL" id="skillsSQL" type="checkbox">
+                <label class="form-check-label" for="skillsSQL">
+                    SQL
                 </label>
             </div>
 
+            <div class="form-check abc-checkbox ">
+                <input class="form-check-input" name="skillsJava" id="skillsJava" type="checkbox">
+                <label class="form-check-label" for="skillsJava">
+                    Java
+                </label>
+            </div>
+            <div class="form-check abc-checkbox ">
+                <input class="form-check-input" name="skillsRust" id="skillsRust" type="checkbox">
+                <label class="form-check-label" for="skillsRust">
+                    Rust
+                </label>
+            </div>
+            <div class="form-check abc-checkbox ">
+                <input class="form-check-input" name="skillsGo" id="skillsGo" type="checkbox">
+                <label class="form-check-label" for="skillsGo">
+                    Go
+                </label>
+            </div>
 
-            <div class="form-check">
-                <label class="form-check-label">
-                    <input type="checkbox" class="form-check-input" value="">Swift
+
+            <div class="form-check abc-checkbox ">
+                <input class="form-check-input" name="skillsSwift" id="skillsSwift" type="checkbox">
+                <label class="form-check-label" for="skillsSwift">
+                    Swift
                 </label>
             </div>
-            <div class="form-check">
-                <label class="form-check-label">
-                    <input type="checkbox" class="form-check-input" value="">Kotlin
+            <div class="form-check abc-checkbox ">
+                <input class="form-check-input" name="skillsKotlin" id="skillsKotlin" type="checkbox">
+                <label class="form-check-label" for="skillsKotlin">
+                    Kotlin
                 </label>
             </div>
-            <div class="form-check">
-                <label class="form-check-label">
-                    <input type="checkbox" class="form-check-input" value="">Perl
+            <div class="form-check abc-checkbox ">
+                <input class="form-check-input" name="skillsPerl" id="skillsPerl" type="checkbox">
+                <label class="form-check-label" for="skillsPerl">
+                    Perl
                 </label>
             </div>
         </div>
