--- a/static/scss/_search.scss
+++ b/static/scss/_search.scss
@@ -38,14 +38,14 @@ a[data-toggle="collapse"] {
 
 
 #sidebar {
-    background: $darkblue;
+    background: $brightmidblue;
     color: #fff;
     transition: all 0.3s;
 }
 
 #sidebar .sidebar-header {
     padding: 20px;
-    background: $darkblue;
+    background: $brightmidblue;
 }
 
 #sidebar ul.components {
@@ -81,6 +81,19 @@ ul ul a {
     background: $midblue;
 }
 
+.nav-tabs {
+    padding-left: 1em;
+}
+
 .skill-column {
     padding: 2rem;
+}
+
+.abc-checkbox {
+    margin-bottom: 0.5rem;
+}
+
+.district-row {
+    border: 1px solid white;
+    padding: 1em;
 }
