--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -19,7 +19,7 @@
 
     <!-- Load stylesheets -->
 
-        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css"
         href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" />
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600|Roboto&display=swap" rel="stylesheet">
@@ -27,6 +27,10 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         type="text/css" />
+
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.9/dist/css/bootstrap-select.min.css">
+
+
 
     <!-- Font Awesome JS -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js"
@@ -38,7 +42,8 @@
 
 
 
-    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/awesome-bootstrap-checkbox.css')}}" /> 
+    <link rel="stylesheet" type="text/css"
+        href="{{url_for('static', filename='css/awesome-bootstrap-checkbox.css')}}" />
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/main.css')}}" />
 </head>
 
@@ -61,7 +66,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.js"
         integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
 
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
@@ -69,6 +74,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"
         integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous">
     </script>
+
+    <!-- Bootstrap JS -->
+
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.9/dist/js/bootstrap-select.min.js"></script>
+
 
     <!-- Special navbar behavior, with two distinct styles for desktop and mobile. Applicable for index and about pages. -->
 
@@ -100,16 +112,24 @@
     {% if active == 'search' %}
 
     <style>
-       #navbar.bg-light {
+        #navbar.bg-light {
             background-color: #0B132B !important;
         }
 
-       .nav-link {
+        .nav-link {
             color: #2581B0 !important;
         }
     </style>
 
+
     <script src="{{url_for('static', filename='js/search.js')}}"></script>
+
+    <script> 
+$(function () {
+    $('select').selectpicker();
+});
+
+</script>
 
     {% endif %}
 
