--- a/static/scss/_search.scss
+++ b/static/scss/_search.scss
@@ -41,11 +41,13 @@ a[data-toggle="collapse"] {
     background: $brightmidblue;
     color: #fff;
     transition: all 0.3s;
+    padding-top: 2rem;
 }
 
 #sidebar .sidebar-header {
     padding: 20px;
     background: $brightmidblue;
+    text-transform: uppercase;
 }
 
 #sidebar ul.components {
@@ -85,6 +87,14 @@ ul ul a {
     padding-left: 1em;
 }
 
+#skillsTab.nav-link {
+    color: black !important;
+}
+
+#desiredSkillsTab.nav-link {
+    color: black !important;
+}
+
 .skill-column {
     padding: 2rem;
 }
@@ -96,4 +106,9 @@ ul ul a {
 .district-row {
     border: 1px solid white;
     padding: 1em;
+}
+
+.refresh {
+    margin-left: 1em;
+    margin-top: 0.5em;
 }
