--- a/static/css/main.css
+++ b/static/css/main.css
@@ -808,9 +808,32 @@ ul ul a {
   margin-bottom: 0.5rem;
 }
 
-.district-row {
+.top-filter-row {
   border: 1px solid white;
   padding: 1em;
+}
+
+.filter-row {
+  border-left: 1px solid white;
+  border-right: 1px solid white;
+  border-bottom: 1px solid white;
+  padding: 1em;
+}
+
+#districtSelect {
+  max-width: 20%;
+}
+
+@media (max-width: 768px) {
+  #districtSelect {
+    margin: 0.5em 0;
+  }
+}
+
+@media (max-width: 768px) {
+  .filter-header {
+    margin: 1em 0;
+  }
 }
 
 .refresh {
