--- a/static/scss/_search.scss
+++ b/static/scss/_search.scss
@@ -103,9 +103,32 @@ ul ul a {
     margin-bottom: 0.5rem;
 }
 
-.district-row {
+.top-filter-row {
     border: 1px solid white;
     padding: 1em;
+}
+
+.filter-row {
+    border-left: 1px solid white;
+    border-right: 1px solid white;
+    border-bottom: 1px solid white;
+    padding: 1em;
+}
+
+#districtSelect {
+    max-width: 20%;
+
+    @media (max-width: $bp-mobile) {
+        margin: 0.5em 0;
+        }
+
+}
+
+.filter-header {
+
+    @media (max-width: $bp-mobile) {
+    margin: 1em 0;
+    }
 }
 
 .refresh {
