--- a/templates/pages/search.html
+++ b/templates/pages/search.html
@@ -93,48 +93,113 @@
             </div>
         </div>
 
-        <div class="row filter-row">
+        <div class="div filter-row">
 
-            <div class="col-12 col-md-3">
+            <div class="row">
 
-                <h5 class="filter-header">Communication</h5>
+                <div class="col-12 col-md-3">
 
-            </div>
+                    <h5 class="filter-header">Communication</h5>
 
-
-            <div class="col-12 col-md-3 commcol">
-
-                <div class="form-check abc-checkbox ">
-                    <input class="form-check-input" name="text" id="text" type="checkbox">
-                    <label class="form-check-label" for="text">
-                        Text
-                    </label>
-                </div>
-
-            </div>
-
-            <div class="col-12 col-md-3 commcol">
-                <div class="form-check abc-checkbox ">
-                    <input class="form-check-input" name="video" id="video" type="checkbox">
-                    <label class="form-check-label" for="video">
-                        Video
-                    </label>
                 </div>
             </div>
 
-            <div class="col-12 col-md-3 commcol">
-                <div class="form-check abc-checkbox ">
-                    <input class="form-check-input" name="inperson" id="inperson" type="checkbox">
-                    <label class="form-check-label" for="inperson">
-                        In person
-                    </label>
-                </div>
+            <div class="row">
 
+                <div class="col-12 col-md-3 filtercol">
+
+                    <div class="form-check abc-checkbox ">
+                        <input class="form-check-input" name="text" id="text" type="checkbox">
+                        <label class="form-check-label" for="text">
+                            Text
+                        </label>
+                    </div>
+
+                </div>
             </div>
+
+            <div class="row">
+                <div class="col-12 col-md-3 filtercol">
+                    <div class="form-check abc-checkbox ">
+                        <input class="form-check-input" name="video" id="video" type="checkbox">
+                        <label class="form-check-label" for="video">
+                            Video
+                        </label>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-12 col-md-3 filtercol">
+                    <div class="form-check abc-checkbox ">
+                        <input class="form-check-input" name="inperson" id="inperson" type="checkbox">
+                        <label class="form-check-label" for="inperson">
+                            In person
+                        </label>
+                    </div>
+
+                </div>
+            </div>
+
         </div>
+        <div class="div filter-row">
+
+            <div class="row">
+                <div class="col-12">
+
+
+                    <h5 class="filter-header">Other</h5>
+
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-12 filtercol">
+
+                    <div class="form-check abc-checkbox ">
+                        <input class="form-check-input" name="lookingForCoFounder" id="lookingForCoFounder"
+                            type="checkbox">
+                        <label class="form-check-label" for="lookingForCoFounder">
+                            Looking for Co-Founder
+                        </label>
+                    </div>
+
+                </div>
+
+            </div>
+
+            <div class="row">
+                <div class="col-12 filtercol">
+
+                    <div class="form-check abc-checkbox ">
+                        <input class="form-check-input" name="availableForHir" id="availableForHir" type="checkbox">
+                        <label class="form-check-label" for="availableForHir">
+                            Available for Hire
+                        </label>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="row">
+
+                <div class="col-12 filtercol">
+
+                    <div class="form-check abc-checkbox ">
+                        <input class="form-check-input" name="availableForProjects" id="availableForProjects"
+                            type="checkbox">
+                        <label class="form-check-label" for="availableForProjects">
+                            Available for Projects
+                        </label>
+                    </div>
+
+                </div>
+            </div>
 
 
 
+
+        </div>
 
     </nav>
 
