--- a/static/scss/_search.scss
+++ b/static/scss/_search.scss
@@ -118,15 +118,19 @@ ul ul a {
 #districtSelect {
     max-width: 20%;
 
-    @media (max-width: $bp-mobile) {
+    @media (max-width: $bp-ipadpro) {
         margin: 0.5em 0;
         }
 
 }
 
+.filtercol {
+    margin-left: 1em;
+}
+
 .filter-header {
 
-    @media (max-width: $bp-mobile) {
+    @media (max-width: $bp-ipadpro) {
     margin: 1em 0;
     }
 }
