--- a/templates/components/skills_list.html
+++ b/templates/components/skills_list.html
@@ -16,8 +16,7 @@ The abc-checkbox class was edited by me in the downloaded css file to reflect ta
             </div>
             <div class="form-check abc-checkbox ">
                 <input class="form-check-input" name="skillsJS" id="skillsJS" type="checkbox">
-                <label class="form-check-label" for="skillsJS">
-                    JavaScript
+                <label class="form-check-label" for="skillsJS">JS
                 </label>
             </div>
             <div class="form-check abc-checkbox ">
