--- a/static/css/main.css
+++ b/static/css/main.css
@@ -712,9 +712,21 @@ ul {
   min-height: 100vh;
 }
 
-@media (min-width: 768px) {
+@media (max-width: 576px) {
   #sidebar {
     width: 40vw;
+  }
+}
+
+@media (max-width: 768px) {
+  #sidebar {
+    width: 60vh;
+  }
+}
+
+@media (max-width: 1024px) {
+  #sidebar {
+    width: 50vh;
   }
 }
 
@@ -844,7 +856,12 @@ ul ul a {
 }
 
 .refresh {
-  margin-left: 1em;
+  margin-left: 5.5em;
   margin-top: 0.5em;
+}
+
+.bootstrap-select > .dropdown-toggle {
+  width: 80%;
+  margin-left: 1em;
 }
 /*# sourceMappingURL=main.css.map */
